# yavomrs

./: Cargo.toml  README.md
src/: lib.rs  yavom.rs
testdata/: alpha  ban  beta  gamma  large2  test1  test2  third  x  y
