[package]
name = "yavomrs"
version = "0.1.0"
edition = "2021"
authors = ["Amos Brocco <amos.brocco@supsi.ch>"]
license = "BSD-3-Clause"
description = "Yet Another Variation of Myers for generic containers"
homepage = "https://github.com/slashdotted/yavomrs"
repository = "https://github.com/slashdotted/yavomrs"
exclude = [ "testdata/*" ]

[dependencies]
